--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h2>랜덤 고양이 갤러리</h2>
+        <h2>고양이 갤러리.jyc</h2>
         <button id="loadMore" class="btn btn-primary mb-3">새로운 고양이 불러오기</button>
         <div id="catGallery" class="row"></div>
     </div>
